force-app/main/default/objects/Opportunity_Question__c.object
<CustomObject>
    <description>Objects used to record opportunity related questions for e.g. for Qualification Framework, Risk Framework in the Enterprise Engagement space</description>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Linked Opportunity</description>
        <inlineHelpText>Opportunity the question links to</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Questions</relationshipLabel>
        <relationshipName>Opportunity_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Outcome_Flag__c</fullName>
        <description>Display a flag colour based on Outcome</description>
        <formula>IMAGE( 
CASE(Outcome__c, 
&quot;GREEN&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;AMBER&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;RED&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Outcome&quot;)</formula>
        <inlineHelpText>Display a flag colour based on Outcome</inlineHelpText>
        <label>Outcome Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <description>Outcome for this question</description>
        <inlineHelpText>Outcome for this question</inlineHelpText>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RED</fullName>
                </value>
                <value>
                    <fullName>AMBER</fullName>
                </value>
                <value>
                    <fullName>GREEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rationale__c</fullName>
        <description>What is the rationale for the outcome?</description>
        <inlineHelpText>What is the rationale for the outcome?</inlineHelpText>
        <label>Rationale</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Question Type</description>
        <inlineHelpText>Question Type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Intellectual Property</fullName>
                </value>
                <value>
                    <fullName>Global Engagement</fullName>
                </value>
                <value>
                    <fullName>Integrity Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <description>Id to uniquely identify an opportunity question</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Id linking Question &amp; Opportunity</inlineHelpText>
        <label>Unique Id</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Opportunity Question</label>
    <nameField>
        <label>Question</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Questions</pluralLabel>
    <recordTypes>
        <fullName>Enterprise</fullName>
        <active>true</active>
        <description>Enterprise Questionnaire</description>
        <label>Enterprise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Qualification_Framework</fullName>
        <active>true</active>
        <description>Engage Enterprise Opportunity Pursuit Framework</description>
        <label>Qualification Framework</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>